# oSHInT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  kafka.test.py  make_resume.py  placeholder.html  pyproject.toml
documents/: handover.md
frontend/: index.html
github_playwright/: github_pw.py
maigret/: config.py  enricher.py  logging_config.py  main.py  mcp_server.py  models.py  ppf.py  req.txt  runner.py  tiers.py
maigret/academic/: __init__.py  client.py  config.py  event_builder.py  models.py  ppf.py  runner.py
maigret/agent/: __init__.py  agent.py  agent_config.py  client.py  interfaces.py  prompts.py  report.py  tools.py
maigret/events/: event_builder.py  raw_publisher.py
maigret/intake/: __init__.py  resume_parser.py
maigret/kafka/: producer.py
maigret/orchestrator/: __init__.py  blackbird_source.py  config.py  github_octosuite_ppf.py  github_playwright_source.py  github_source.py  h8mail_source.py  holehe_source.py  linkedin_ppf.py  maigret_source.py  orchestrator.py  spiderfoot_source.py
maigret/resolver/: __init__.py  config.py  flatten.py  golden.py  linker.py  publisher.py
scripts/: spiderfoot-docker.sh
